# bl602-hal

./: Cargo.toml  LICENSE-MULAN  LICENST-MIT  README.md  asm.S  assemble.bat  assemble.ps1  assemble.sh  build.rs  hal_defaults.x  memory.x
.cargo/: config.toml
.github/workflows/: ci.yml  clippy.yml
examples/: blinky.rs  i2c_ssd1306.rs  led_interrupt_switch.rs  led_timer_interrupt.rs  rtc.rs  serial.rs  serial_dma.rs  serial_dma.txt  watchdog_example.rs
src/: checksum.rs  clock.rs  delay.rs  gpio.rs  i2c.rs  interrupts.rs  lib.rs  pwm.rs  rtc.rs  serial.rs  spi.rs  timer.rs  watchdog.rs
src/dma/: mod.rs  single_buffer.rs  single_channel.rs
