[package]
name = "bl602-hal"
version = "0.1.0"
authors = ["Sipeed Co.,Ltd. <support@sipeed.com>", "Luo Jia <me@luojia.cc>"]
edition = "2018"
license = "MIT OR MulanPSL-2.0"
keywords = ["hal", "bl602", "riscv"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/sipeed/bl602-hal"
description = "HAL for the bl602 microcontroller"

[dependencies]
bl602-pac = { git = "https://github.com/sipeed/bl602-pac", branch = "main" }
embedded-hal = "=1.0.0-rc.1"
embedded-hal-nb = "=1.0.0-rc.1"
embedded-time = "0.12.0"
riscv = "0.10.1"
nb = "1.0"
paste = "1.0"
void = { default-features = false, version = "1.0.2" }

[dependencies.embedded-hal-zero]
version = "0.2.5"
package = "embedded-hal"
features = ["unproven"]

[dev-dependencies]
riscv-rt = "0.11.0"
panic-halt = "0.2.0"
ssd1306 = "0.6.0"
embedded-graphics = "0.7.1"
critical-section = "1.1"

[build-dependencies]
riscv-target = "0.1.2"

[features]
default = ["critical-section-impl"]
critical-section-impl = ["bl602-pac/critical-section", "riscv/critical-section-single-hart"]
